package org.example.Ejercicio2;

public class Desarrollador extends Empleado{

    public Desarrollador() {

        super();
    }

    @Override

    public void realizarTarea() {

        System.out.println("Escribiendo código y solucionando bugs.");
    }
}
