package org.example.Ejercicio2;

public class Diseñador extends Empleado{

    public Diseñador() {
        super();
    }

    @Override

    public void realizarTarea() {

        System.out.println("Creando diseños gráficos y prototipos.");
    }
}
